polish paint tool and fix tile refresh
editor\index.html:
- made the tile/sprite/item text box span the width of the paint tool so i can see all of the long names that i use
- put the paint transformation and mirror buttons into navControl boxes
- put the view/hide grid button in the first line of transformation buttons because that space was looking empty, and to shorten the paint panel a bit
- on that note, i also put the inventory button (that shows up when working in the item tab) in line with the mirror buttons
-- the word is too long and probably looks pretty hacky on some platforms, but as of rn i've never used the inventory feature, so it works just fine for me

paintToolStyle.css:
- added some CSS to accommodate the above adjustments to the HTML

editor.js:
- fixed a typo
- added a comment

paint.js:
- changed the event raised by the updateDrawingData function from "game_data_change" to "game_data_refresh", which i think /should/ be more gentle on the overall program? we'll see

--- a/editor/style/paintToolStyle.css
+++ b/editor/style/paintToolStyle.css
@@ -18,9 +18,6 @@
 	border-color: var(--bitsy-color-main-2);
 }
 
-.buttonGroup {
-	padding: 2px;
-	margin: 2px;
-	margin-left: 0px;
-	display: inline-block;
+.paintToolTop {
+	margin-top: var(--bitsy-space-m);
 }
